<resources>
    <string name="app_name">Customer List</string>
    <string name="fab_content_desc">Adding a new customer</string>
    <string name="customer_item_name">Name:</string>
    <string name="customer_item_age">Age:</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="add_image">Add Image</string>
    <string name="enter_profile_image_url">Enter Profile Image Url</string>
    <string name="add_customer">Add Customer</string>
    <string name="edit_customer">Edit Customer</string>
    <string name="back">Back</string>
    <string name="customer_delete_dialog">Are you sure to delete this customer?</string>
    <string name="delete_customer">Delete Customer</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="yes">Yes</string>
</resources>