<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddCustomer">

    <EditText
        android:id="@+id/edt_customer_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.19"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edt_customer_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/age"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/edt_customer_name"
        app:layout_constraintStart_toStartOf="@+id/edt_customer_name"
        app:layout_constraintTop_toBottomOf="@+id/edt_customer_name" />

    <EditText
        android:id="@+id/edt_customer_image_url"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/enter_profile_image_url"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="@+id/edt_customer_age"

        app:layout_constraintStart_toStartOf="@+id/edt_customer_age"
        app:layout_constraintTop_toBottomOf="@+id/sw_add_image"
        android:visibility="gone"/>

    <Button
        android:id="@+id/btn_add_customer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_customer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.89"
        android:textAllCaps="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_customer_image_url" />

    <Switch
        android:id="@+id/sw_add_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/add_image"
        app:layout_constraintStart_toStartOf="@+id/edt_customer_age"
        app:layout_constraintTop_toBottomOf="@+id/edt_customer_age" />


</androidx.constraintlayout.widget.ConstraintLayout>